# animated-b-spline

./: CMakeLists.txt  GraphiciView.cpp  GraphiciView.h  bezierinterpolator.cpp  bezierinterpolator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  movingellipseitem.cpp  movingellipseitem.h  resource.qrc
libs/: CMakeLists.txt
libs/bezier/: CMakeLists.txt  bezierinterpolator.cpp  bezierinterpolator.h
libs/geometry/: CMakeLists.txt  GeometryCompute.cpp  GeometryCompute.h
libs/kbspline/: BSplineSubdivision.cpp  BSplineSubdivision.hpp  CMakeLists.txt
